# gz-rendering

./: .bazelrc  .codespell-ignore  .gitignore  BUILD.bazel  CMakeLists.txt  Changelog.md  Dockerfile  MODULE.bazel  Migration.md  README.md  api.md.in  bitbucket-pipelines.yml  codecov.yml  coverage.ignore.in  cppcheck.suppress.in  docker-compose.yaml  package.xml  tutorials.md.in
doc/: CMakeLists.txt  doxygen.css  header.html  ignition.in  ogre_1-9.tag.xml.tgz  tutorials.in
examples/: BUILD.bazel  CMakeLists.txt
examples/actor_animation/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc  README.md
examples/async_readback_bench/: CMakeLists.txt  Main.cc
examples/boundingbox_camera/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/camera_follow/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/camera_tracking/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/cpu_bench/: CMakeLists.txt  Main.cc  README.md
examples/custom_scene_viewer/: CMakeLists.txt  DemoWindow.cc  DemoWindow.hh  ManualSceneDemo.cc  ManualSceneDemo.hh  SceneBuilder.cc  SceneBuilder.hh  TestTypes.hh
examples/custom_shaders/: CMakeLists.txt  custom_shaders.cc
examples/custom_shaders_uniforms/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc  example_config.hh.in
examples/depth_camera/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  GlutWindow2.cc  Main.cc
examples/dynamic_lines/: CMakeLists.txt  Main.cc  README.md
examples/egl_demo/: Main.cc
examples/frustum_visual/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/gazebo_scene_viewer/: CMakeLists.txt  CameraWindow.cc  CameraWindow.hh  GazeboDemo.cc  GazeboWorldDemo.cc  SceneManager.cc  SceneManager.hh  SceneManagerPrivate.hh  falling_objects.world
examples/global_illumination/: CMakeLists.txt  GiConfig.hh  GlutWindow.cc  GlutWindow.hh  Main.cc  Sdl2Window.cc  Sdl2Window.hh
examples/gpu_compress_bench/: CMakeLists.txt  Main.cc  example_config.hh.in
examples/heightmap/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/hello_world_plugin/: CMakeLists.txt  HelloWorldPlugin.cc  README.md
examples/lens_trace/: CMakeLists.txt  CustomRenderEngine.cc  CustomRenderEngineRenderTypes.hh  Main.cc
examples/lidar_visual/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc  README.md  example_config.hh.in
examples/lux_core/: CMakeLists.txt  LuxCore.cc  LuxCoreRenderTypes.hh  README.md
examples/lux_core_engine/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  LuxCoreEngine.cc  LuxCoreEngineCamera.cc  LuxCoreEngineCamera.hh  LuxCoreEngineGeometry.cc  LuxCoreEngineGeometry.hh  LuxCoreEngineLight.cc  LuxCoreEngineLight.hh  LuxCoreEngineMaterial.cc  LuxCoreEngineMaterial.hh  LuxCoreEngineMesh.cc  LuxCoreEngineMesh.hh  LuxCoreEngineMeshFactory.cc  LuxCoreEngineMeshFactory.hh  LuxCoreEngineNode.cc  LuxCoreEngineNode.hh  LuxCoreEngineObject.cc  LuxCoreEngineObject.hh  LuxCoreEngineRenderTarget.cc  LuxCoreEngineRenderTarget.hh  LuxCoreEngineRenderTypes.hh  LuxCoreEngineScene.cc  LuxCoreEngineScene.hh  LuxCoreEngineSensor.cc  LuxCoreEngineSensor.hh  LuxCoreEngineVisual.cc  LuxCoreEngineVisual.hh  Main.cc  README.md
examples/map_visual/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc  README.md
examples/mesh_viewer/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/mouse_picking/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/mouse_picking_demo/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/ogre2_demo/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/ogre2_test/: CMakeLists.txt  GlutWindow.cc  Main.cc
examples/particles_demo/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/pbr_demo/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/pointcloud_visual/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/pro_render_engine/: CMakeLists.txt  GlutWindow.cc  Main.cc  ProRenderEngine.cc  ProRenderEngineRenderTypes.hh
examples/projector/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/render_engine/: CMakeLists.txt  CustomRenderEngine.cc  CustomRenderEngineRenderTypes.hh  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/render_pass/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/rgbd_throughput_bench/: CMakeLists.txt  Main.cc
examples/segmentation_camera/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/simple_demo/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc  ogre.cpp  triangle.cpp
examples/simple_demo_qml/: CMakeLists.txt  GzRenderer.cc  GzRenderer.hh  IgnitionRenderer.cc  IgnitionRenderer.cpp  IgnitionRenderer.h  IgnitionRenderer.hh  Main.cc  Main.cpp  Main.qml  Main.qrc  ThreadRenderer.cpp  ThreadRenderer.h  main.cc  main.qml  ogre_texture_import.cc  ogre_texture_import.h  ogre_texture_node.cc  ogre_texture_node.h
examples/simple_demo_sdl2/: Main.cc
examples/sonar_cone/: CMakeLists.txt  GlutWindow.cc  Main.cc
examples/text_geom/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  Main.cc
examples/thermal_camera/: CMakeLists.txt  GlutWindow.cc  GlutWindow.hh  GlutWindow2.cc  Main.cc
ogre2/: BUILD.bazel
ogre_next/: BUILD.bazel
src/: ArrowVisual.cc  ArrowVisual_TEST.cc  AxisVisual.cc  AxisVisual_TEST.cc  BoundingBox.cc  BoundingBoxCamera.cc  BoundingBoxCamera_TEST.cc  BoundingBox_TEST.cc  CMakeLists.txt  COMVisual.cc  COMVisual_TEST.cc  Camera.cc  CameraLens.cc  Camera_TEST.cc  Capsule.cc  Capsule_TEST.cc  CompositeVisual.cc  CompressedImage.cc  CompressedImage_TEST.cc  DepthCamera.cc  DistortionPass.cc  Ellipsoid_TEST.cc  FrustumVisual.cc  GaussianNoisePass.cc  GaussianNoisePass_TEST.cc  Geometry.cc  GizmoVisual.cc  GizmoVisual_TEST.cc  GlobalIlluminationBase.cc  GlobalIlluminationCiVct.cc  GlobalIlluminationVct.cc  GlutWindow.cc  GpuRays.cc  GraphicsAPI.cc  GraphicsAPI_TEST.cc  Grid.cc  Grid_TEST.cc  HeightmapDescriptor.cc  HeightmapDescriptor_TEST.cc  Heightmap_TEST.cc  (+81 more)
test/: BUILD.bazel  CMakeLists.txt  gz_rendering_test.cmake  test_config.h.in  test_config.hh.in
(+1443 files in other folders)
