## MODULE.bazel
module(
    name = "gz-rendering",
    repo_name = "org_gazebosim_gz-rendering",
)

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "rules_license", version = "1.0.0")

# Gazebo Dependencies
bazel_dep(name = "rules_gazebo", version = "0.0.3")
bazel_dep(name = "gz-common")
bazel_dep(name = "gz-math")
bazel_dep(name = "gz-plugin")
bazel_dep(name = "gz-utils")

archive_override(
    module_name = "gz-common",
    strip_prefix = "gz-common-gz-common7",
    urls = ["https://github.com/gazebosim/gz-common/archive/refs/heads/gz-common7.tar.gz"],
)

archive_override(
    module_name = "gz-math",
    strip_prefix = "gz-math-gz-math9",
    urls = ["https://github.com/gazebosim/gz-math/archive/refs/heads/gz-math9.tar.gz"],
)

archive_override(
    module_name = "gz-plugin",
    strip_prefix = "gz-plugin-gz-plugin4",
    urls = ["https://github.com/gazebosim/gz-plugin/archive/refs/heads/gz-plugin4.tar.gz"],
)

archive_override(
    module_name = "gz-utils",
    strip_prefix = "gz-utils-gz-utils4",
    urls = ["https://github.com/gazebosim/gz-utils/archive/refs/heads/gz-utils4.tar.gz"],
)
