cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(gz-rendering-examples)

add_subdirectory(actor_animation)
add_subdirectory(boundingbox_camera)
add_subdirectory(camera_tracking)
add_subdirectory(custom_scene_viewer)
add_subdirectory(custom_shaders)
add_subdirectory(custom_shaders_uniforms)
add_subdirectory(depth_camera)
#add_subdirectory(gazebo_scene_viewer) Requires Gazebo?
add_subdirectory(heightmap)
add_subdirectory(hello_world_plugin)
add_subdirectory(lidar_visual)
add_subdirectory(mesh_viewer)
add_subdirectory(mouse_picking)
add_subdirectory(ogre2_demo)
add_subdirectory(particles_demo)
add_subdirectory(render_pass)
add_subdirectory(segmentation_camera)
add_subdirectory(simple_demo)
add_subdirectory(simple_demo_qml)
add_subdirectory(text_geom)
add_subdirectory(thermal_camera)
add_subdirectory(transform_control)
add_subdirectory(view_control)
add_subdirectory(visualization_demo)
add_subdirectory(waves)
add_subdirectory(wide_angle_camera)
